--- a/src/main/resources/ebean.properties
+++ b/src/main/resources/ebean.properties
@@ -21,7 +21,7 @@ ebean.log.directory=logs
 log.writer=com.avaje.lib.Log4jLogger  
 
 ebean.debug.sql=true
-ebean.classes=models.UserFlexi;models.ProjectFlexi;models.ClientFlexi;models.TaskFlexi;models.FlexiAttribute;com.mnt.orghierarchy.model.Organization;models.User;models.Company;models.RoleLevel;models.LeaveBalance;models.RoleX;models.LeaveLevel;models.LeaveX;models.Project;models.Timesheet;models.TimesheetRow;models.Delegate;models.Client;models.Feedback;models.ApplyLeave;models.Notification;models.Task;models.RoleLeave;models.MailSetting
+ebean.classes=models.UserFlexi;models.ProjectFlexi;models.ClientFlexi;models.TaskFlexi;models.FlexiAttribute;com.mnt.createProject.model.Projectinstance;com.mnt.createProject.model.Projectinstancenode;com.mnt.createProject.model.Saveattributes;com.mnt.projectHierarchy.model.Projectclassnodeattribut;com.mnt.projectHierarchy.model.Projectclassnode;com.mnt.projectHierarchy.model.Projectclass;com.mnt.roleHierarchy.model.Role;com.mnt.orghierarchy.model.Organization;models.User;models.Company;models.RoleLevel;models.LeaveBalance;models.RoleX;models.LeaveLevel;models.LeaveX;models.Project;models.Timesheet;models.TimesheetRow;models.Delegate;models.Client;models.Feedback;models.ApplyLeave;models.Notification;models.Task;models.RoleLeave;models.MailSetting
 ## Log transaction begins and ends etc
 ## (0=NoLogging 1=minimal ... 9=logAll)
 #ebean.debug.transaction=1
