--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	<listener>
+  		<listener-class>com.custom.helpers.EscapeXmlELResolverListener</listener-class>
+	</listener> 
 
 	<!-- Processes application requests -->
 	<servlet>
