--- a/pom.xml
+++ b/pom.xml
@@ -215,8 +215,9 @@
 			<artifactId>tiles-el</artifactId>
 			<version>2.2.2</version>
 			
-		</dependency>
+		</dependency> 
 
+	<!-- 
 		<dependency>
 			<groupId>crud-ebean</groupId>
 			<artifactId>crud-ebean</artifactId>
@@ -224,7 +225,7 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/libs/crud-ebean-0.0.2.jar</systemPath>
 		</dependency>
-		
+	-->
 
 		<!-- Test -->
 		<dependency>
@@ -234,12 +235,12 @@
 		</dependency>
 
 		<!-- Test -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 		
 		<dependency>
   			<groupId>commons-fileupload</groupId>
