--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,1 +1,7 @@
 imageRootDir=D:\\dev\\time-images
+mail.username="mindnervesdemo@gmail.com"
+mail.password="mindnervesadmin"
+mail.hostname="smtp.gmail.com"
+mail.port="587"
+mail.ssl=true
+mail.tls=false
