--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
-imageRootDir=D:\\dev\\time-images
+imageRootDir=/time-images
 mail.username="mindnervesdemo@gmail.com"
 mail.password="mindnervesadmin"
 mail.hostname="smtp.gmail.com"
