--- a/src/main/resources/ebean.properties
+++ b/src/main/resources/ebean.properties
@@ -50,7 +50,7 @@ ebean.classes=models.Attachment;models.TaskComment;models.TaskDetails;models.Tim
 datasource.default=default
 datasource.default.username=root
 datasource.default.password=root
-datasource.default.databaseUrl=jdbc:mysql://li664-78.members.linode.com:3306/timemgmt
+datasource.default.databaseUrl=jdbc:mysql://localhost:3306/timemgmt
 datasource.default.databaseDriver=com.mysql.jdbc.Driver
 datasource.default.minConnections=1
 datasource.default.maxConnections=25
