--- a/src/main/resources/ebean.properties
+++ b/src/main/resources/ebean.properties
@@ -1,7 +1,7 @@
 
 
-ebean.autofetch.querytuning=true
-ebean.autofetch.profiling=true
+ebean.autofetch.querytuning=false
+ebean.autofetch.profiling=false
 ebean.autofetch.implicitmode=default_off
 ebean.autofetch.profiling.min=1
 ebean.autofetch.profiling.base=10
@@ -9,16 +9,17 @@ ebean.autofetch.profiling.base=10
 ebean.ddl.generate=false
 ebean.ddl.run=false
 ebean.debug.sql=true  
-ebean.debug.lazyload=false  
+#ebean.debug.lazyload=false  
 
-ebean.logging.logfilesharing=all 
-ebean.logging.iud=sql  
-ebean.logging.query=sql  
-ebean.logging.sqlquery=sql  
-ebean.logging.txnCommit=none  
-ebean.logging=all  
-ebean.log.directory=logs
-log.writer=com.avaje.lib.Log4jLogger  
+#ebean.log.toconsole=true
+#ebean.logging.logfilesharing=all 
+#ebean.logging.iud=sql  
+#ebean.logging.query=sql  
+#ebean.logging.sqlquery=sql  
+#ebean.logging.txnCommit=none  
+#ebean.logging=all  
+#ebean.log.directory=logs
+#log.writer=com.avaje.lib.Log4jLogger  
 
 ebean.debug.sql=true
 ebean.classes=models.Attachment;models.TaskComment;models.TaskDetails;models.TimesheetActual;models.LeavesCredit;models.CaseData;models.CaseNotes;models.TimesheetRowActual;models.TimesheetDaysActual;models.UserLeave;models.TimesheetDays;models.UserFlexi;models.ProjectFlexi;models.CaseFlexi;models.ClientFlexi;models.Department;models.SupplierFlexi;models.Supplier;models.TaskFlexi;models.FlexiAttribute;com.mnt.createProject.model.ProjectComment;com.mnt.createProject.model.ProjectAttachment;com.mnt.createProject.model.Projectinstance;com.mnt.createProject.model.Projectinstancenode;com.mnt.createProject.model.Saveattributes;com.mnt.projectHierarchy.model.Projectclassnodeattribut;com.mnt.projectHierarchy.model.Projectclassnode;com.mnt.projectHierarchy.model.Projectclass;com.mnt.orghierarchy.model.Organization;models.User;models.Company;models.RoleLevel;models.LeaveBalance;models.RoleX;models.LeaveLevel;models.LeaveX;models.Project;models.Timesheet;models.TimesheetRow;models.Delegate;models.Client;models.Feedback;models.ApplyLeave;models.Notification;models.Task;models.RoleLeave;models.MailSetting
