--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,6 +2,6 @@ imageRootDir=/time-images
 mail.username="mindnervesdemo@gmail.com"
 mail.password="mindnervesadmin"
 mail.hostname="smtp.gmail.com"
-mail.port="587"
+mail.port=587
 mail.ssl=true
 mail.tls=false
