--- a/src/main/resources/ebean.properties
+++ b/src/main/resources/ebean.properties
@@ -49,8 +49,8 @@ ebean.classes=models.Attachment;models.TaskComment;models.TaskDetails;models.Tim
 #ebean.datasource.factory=default
 #datasource.default=mysql
 datasource.default=default
-datasource.default.username=myuser
-datasource.default.password=mypass
+datasource.default.username=root
+datasource.default.password=ocus123#
 datasource.default.databaseUrl=jdbc:mysql://localhost:3306/timemgmt
 datasource.default.databaseDriver=com.mysql.jdbc.Driver
 datasource.default.minConnections=1
