--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,7 +1,7 @@
 imageRootDir=/time-images
-mail.username="mindnervesdemo@gmail.com"
-mail.password="mindnervesadmin"
-mail.hostname="smtp.gmail.com"
+mail.username=mindnervesdemo@gmail.com
+mail.password=mindnervesadmin
+mail.hostname=smtp.gmail.com
 mail.port=587
 mail.ssl=true
 mail.tls=false
