--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.javers</groupId>
+			<artifactId>javers-core</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+			
+		
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>r09</version>
