--- a/src/main/resources/ebean.properties
+++ b/src/main/resources/ebean.properties
@@ -1,5 +1,4 @@
 
-
 ebean.autofetch.querytuning=false
 ebean.autofetch.profiling=false
 ebean.autofetch.implicitmode=default_off
@@ -8,18 +7,18 @@ ebean.autofetch.profiling.base=10
 #ebean.autofetch.profiling.rate=0.05
 ebean.ddl.generate=false
 ebean.ddl.run=false
-ebean.debug.sql=true  
-#ebean.debug.lazyload=false  
+ebean.debug.sql=true
+#ebean.debug.lazyload=false
 
 #ebean.log.toconsole=true
-#ebean.logging.logfilesharing=all 
-#ebean.logging.iud=sql  
-#ebean.logging.query=sql  
-#ebean.logging.sqlquery=sql  
-#ebean.logging.txnCommit=none  
-#ebean.logging=all  
+#ebean.logging.logfilesharing=all
+#ebean.logging.iud=sql
+#ebean.logging.query=sql
+#ebean.logging.sqlquery=sql
+#ebean.logging.txnCommit=none
+#ebean.logging=all
 #ebean.log.directory=logs
-#log.writer=com.avaje.lib.Log4jLogger  
+#log.writer=com.avaje.lib.Log4jLogger
 
 ebean.debug.sql=true
 ebean.classes=models.Attachment;models.TaskComment;models.TaskDetails;models.TimesheetActual;models.LeavesCredit;models.CaseData;models.CaseNotes;models.TimesheetRowActual;models.TimesheetDaysActual;models.UserLeave;models.TimesheetDays;models.UserFlexi;models.ProjectFlexi;models.CaseFlexi;models.Country;models.State;models.City;models.ClientFlexi;models.Department;models.SupplierFlexi;models.Supplier;models.TaskFlexi;models.FlexiAttribute;com.mnt.createProject.model.ProjectComment;com.mnt.createProject.model.ProjectAttachment;com.mnt.createProject.model.Projectinstance;com.mnt.createProject.model.Pits;com.mnt.createProject.model.AduitLog;com.mnt.createProject.model.DefinePart;com.mnt.createProject.model.ProjectPart;com.mnt.createProject.model.Projectinstancenode;com.mnt.createProject.model.Saveattributes;com.mnt.projectHierarchy.model.Projectclassnodeattribut;com.mnt.projectHierarchy.model.Projectclassnode;com.mnt.projectHierarchy.model.Projectclass;com.mnt.orghierarchy.model.Organization;models.User;models.Company;models.RoleLevel;models.LeaveBalance;models.RoleX;models.LeaveLevel;models.LeaveX;models.Project;models.Timesheet;models.TimesheetRow;models.Delegate;models.Client;models.Feedback;models.ApplyLeave;models.Notification;models.Task;models.RoleLeave;models.MailSetting
@@ -27,14 +26,13 @@ ebean.classes=models.Attachment;models.TaskComment;models.TaskDetails;models.Tim
 ## (0=NoLogging 1=minimal ... 9=logAll)
 #ebean.debug.transaction=1
 #ebean.log.directory=${catalina.base}/logs/trans
-#log4j.properties=point to the log4j properties file  
+#log4j.properties=point to the log4j properties file
 
 
 
 ## -------------------------------------------------------------
 ## DataSources (If using default Ebean DataSourceFactory)
-## ------------------------------------------------------------- 
-
+## -------------------------------------------------------------
 #datasource.default=h2
 #
 #datasource.h2.username=sa
@@ -50,7 +48,7 @@ ebean.classes=models.Attachment;models.TaskComment;models.TaskDetails;models.Tim
 #datasource.default=mysql
 datasource.default=default
 datasource.default.username=root
-datasource.default.password=ocus123#
+datasource.default.password=BaE9x@#G
 datasource.default.databaseUrl=jdbc:mysql://localhost:3306/timemgmt
 datasource.default.databaseDriver=com.mysql.jdbc.Driver
 datasource.default.minConnections=1
@@ -76,5 +74,4 @@ datasource.default.isolationlevel=read_committed
 #datasource.pg.minConnections=1
 #datasource.pg.maxConnections=25
 #datasource.pg.isolationlevel=read_committed
-#datasource.pg.heartbeatsql=select 'a'
 
