--- a/pom.xml
+++ b/pom.xml
@@ -266,7 +266,13 @@
     		<artifactId>thumbnailator</artifactId>
     		<version>0.4.7</version>
     	</dependency>
-		
+				
+   <dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-ooxml</artifactId>
+		<version>3.9</version>
+	</dependency>
+	
 	</dependencies>
 	<repositories>
 		<repository>
