--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,12 @@
     		<artifactId>thumbnailator</artifactId>
     		<version>0.4.7</version>
     	</dependency>
+    	<dependency>
+			<groupId>net.sf.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>2.3</version>
+		</dependency>
+    	
 				
    <dependency>
 		<groupId>org.apache.poi</groupId>
